# vmodule

./: .cproject  .project  CMakeLists.txt  README.md  ReadMe.txt  event_compile.sh  main.cpp  stdafx.cpp  vmodule.cpp  vmodule.sln  vmodule.vcxproj  vmodule.vcxproj.filters
Debug/: makefile  sources.mk  subdir.mk
Debug/sutils/: subdir.mk
Debug/tests/: subdir.mk
Debug/utils/: subdir.mk
hardware/: CMakeLists.txt
hardware/serial/: SerialPort.cpp
include/hardware/serial/: SerialPort.h
include/socket/: Socket.h  SocketTask.h  TcpSocket.h  UdpSocket.h
include/sutils/: Atomic.h  AutoBuffer.h  Compat.h  Condition.h  Errors.h  Exception.h  FileUtils.h  ILogger.h  Logger.h  LoggerThread.h  Mutex.h  PlatformDefs.h  PlatformDefs.h~  Queue.h  Queue.hpp  RefBase.h  SingletonHelper.h  StringUtils.h  StrongPointer.h  Thread.h  ThreadDefs.h  ThreadImpl.h  ThreadLocal.h  Timers.h  TypeHelpers.h  VmBlockingQueue.h  VmHeap.h  VmQueue.h  types.h
include/tests/: StrongPointerTest.h  ThreadTest.h
include/vmodule/: vmodule.h
socket/: CMakeLists.txt  Socket.cpp  SocketTask.cpp  TcpSocket.cpp  UdpSocket.cpp
sutils/: AutoBuffer.cpp  CMakeLists.txt  Condition.cpp  Exception.cpp  FileUtils.cpp  ILogger.cpp  Logger.cpp  LoggerThread.cpp  Mutex.cpp  Queue.cpp  RefBase.cpp  StringUtils.cpp  Thread.cpp  ThreadImpl.cpp  Timers.cpp  VmBlockingQueue.cpp  VmHeap.cpp  VmQueue.cpp
tests/: CMakeLists.txt  QueueTest.cpp  StrongPointerTest.cpp  ThreadTest.cpp
